# LLM-Legal-Initiative

./: .gitignore  README.md  docs.md  legal_council_prompts_v4.1_korean.md  legal_council_prompts_v4.3.1_llm_optimized.md  metadata.json  nul  workflow.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241126_000001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  exceptions.py  rate_limit.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  consultation.py  document.py  memory.py  user.py
backend/app/repositories/: __init__.py  base.py  consultation.py  document.py  user.py
backend/app/schemas/: __init__.py  common.py  consultation.py  document.py  legal_document.py  user.py
backend/app/services/: __init__.py  auth_service.py  consultation_service.py  document_service.py  email_service.py  expert_chat_service.py  individual_chat_service.py  memory_service.py  user_service.py
backend/app/utils/: __init__.py  logger.py
backend/data/learning/: index.json  success_20251130122907505581.json  success_20251130123119616172.json  success_20251130123144806633.json  success_20251130123523384159.json  success_20251130123539196031.json  success_20251130124830787975.json  success_20251130124851252838.json  success_20251130125013279099.json  success_20251130125214850512.json  success_20251130125231650506.json  success_20251130134233418783.json  success_20251130134424610697.json  success_20251130134706750068.json  success_20251130135301268058.json  (+1 more)
backend/docs/: v4_1_feature_guide.md
backend/scripts/: ingest_legal_data.py  init-db.sql  seed_db.py  setup_pgvector.sql
backend/tests/: __init__.py  conftest.py  test_auth.py  test_cascade.py  test_config.py  test_enhanced_cascade.py  test_llm_v41.py  test_logger.py  test_mas_integration.py  test_monitoring.py  test_rate_limit.py  test_security.py
(+57 files in other folders)
